Add styles to navigation section

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,47 @@
-/* Colors
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-Use these predefined colors to maintain consistency and professionalism throughout your portfolio:
---white : #fefefe;
---primary: #7562e0;
---dark-mode-S900: #1a1a29;
---dark-mode-S1000: #181824;
---dark-mode-S200: #31313f;
---gradient-1: linear-gradient(180deg, #6473ff 0%, #2134e1 99.99%, #152bf1 100%);
---gradient-2: linear-gradient(139deg, #f97878 9.79%, rgba(255, 176, 119, 0.81) 64.34%, rgba(255, 176, 119, 0.81) 90.36%);
---gradient-3: linear-gradient(140deg, #f97878 0%, #4052fb 73.99%, #0720ff 100%);
---gradient-4: linear-gradient(142deg, #26c8fc 6.46%, #57ecc8 58.9%, #49f5db 93.88%); */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --white : #fefefe;
+    --primary: #7562e0;
+    --dark-mode-S900: #1a1a29;
+    --dark-mode-S1000: #181824;
+    --dark-mode-S200: #31313f;
+    --gradient-1: linear-gradient(180deg, #6473ff 0%, #2134e1 99.99%, #152bf1 100%);
+    --gradient-2: linear-gradient(139deg, #f97878 9.79%, rgba(255, 176, 119, 0.81) 64.34%, rgba(255, 176, 119, 0.81) 90.36%);
+    --gradient-3: linear-gradient(140deg, #f97878 0%, #4052fb 73.99%, #0720ff 100%);
+    --gradient-4: linear-gradient(142deg, #26c8fc 6.46%, #57ecc8 58.9%, #49f5db 93.88%);
+}
+
+body {
+    background-color: var(--dark-mode-S900);
+    color: var(--white);
+    font-family: 'Poppins', sans-serif;
+}
+a {
+    text-decoration: none;
+    color: var(--white);
+    font-weight: bold;
+}
+ul {
+    list-style: none;
+}
+
+/* Navigation Section */
+nav {
+    background-color: var(--dark-mode-S1000);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 60px;
+}
+.navlinks {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
