--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,47 @@ body {
     background-color: var(--dark-mode-S900);
     color: var(--white);
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
     color: var(--white);
     font-weight: bold;
+    font-size: 18px;
 }
 ul {
     list-style: none;
+}
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+/* Buttons */
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.btn img {
+    height: 18px;
+}
+.btn-primary {
+    background-color: var(--primary);
+    color: var(--white);
+    border: 2px solid var(--primary);
+}
+.btn-secondary {
+    background-color: transparent;
+    color: var(--white);
+    border: 2px solid var(--primary);
 }
 
 /* Navigation Section */
@@ -44,4 +77,41 @@ nav {
     display: flex;
     align-items: center;
     gap: 30px;
+}
+
+/* Header Section */
+#header {
+    display: flex;
+    align-items: center;
+    margin: 40px auto;
+}
+.header-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 20px;
+    min-width: 350px;
+    max-width: 600px;
+    flex: 1;
+}
+.header-content h1 {
+    font-size: 40px;
+}
+.header-content h2 {
+    font-size: 25px;
+}
+.header-img {
+    text-align: center;
+    flex: 1;
+}
+.header-img img {
+    max-width: 90%;
+}
+.btn-wrapper {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
 }
