--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,9 @@ ul {
     width: 80%;
     margin: 0 auto;
 }
+section {
+    margin: 80px auto;
+}
 
 /* Buttons */
 .btn {
@@ -83,7 +86,7 @@ nav {
 #header {
     display: flex;
     align-items: center;
-    margin: 40px auto;
+    /* margin: 40px auto; */
 }
 .header-content {
     display: flex;
@@ -117,9 +120,9 @@ nav {
 }
 
 /* About Me Section */
-#about-me {
+/* #about-me {
     margin: 40px auto;
-}
+} */
 #about-me > h1 {
     color: var(--primary);
     font-size: 30px;
@@ -155,7 +158,7 @@ nav {
     justify-content: end;
 }
 .skill img {
-    width: 50px;
+    width: 70px;
 }
 .skill > h1 {
     font-size: 30px;
