Create styles for Service Section

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,6 @@ nav {
 #header {
     display: flex;
     align-items: center;
-    /* margin: 40px auto; */
 }
 .header-content {
     display: flex;
@@ -120,9 +119,6 @@ nav {
 }
 
 /* About Me Section */
-/* #about-me {
-    margin: 40px auto;
-} */
 #about-me > h1 {
     color: var(--primary);
     font-size: 30px;
@@ -174,4 +170,43 @@ nav {
 }
 .skill-4 {
     background: var(--gradient-4);
+}
+
+/* Services Section */
+#services > h1 {
+    color: var(--primary);
+    font-size: 30px;
+}
+.services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    margin-top: 30px;
+}
+.service {
+    height: 300px;
+    border: 2px solid var(--primary);
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+.service img {
+    width: 70px;
+}
+.service > h2 {
+    color: var(--primary);
+    font-size: 30px;
+}
+.service:hover {
+    background: var(--gradient-1);
+    border: none;
+    cursor: pointer;
+}
+.service:hover > h2 {
+    color: var(--white);
 }
