--- a/styles.css
+++ b/styles.css
@@ -210,3 +210,44 @@ nav {
 .service:hover > h2 {
     color: var(--white);
 }
+
+/* Projects Section */
+#projects > h1 {
+    color: var(--primary);
+    font-size: 30px;
+}
+#projects > p {
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.projects-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+}
+.project {
+    background-color: var(--dark-mode-S200);
+    border-radius: 10px;
+    margin-top: 30px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.project-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 10px;
+}
+.project-content h2 {
+    font-size: 26px;
+} 
+.project img {
+    width: 100%;
+}
+.project .btn-wrapper {
+    justify-content: space-between;
+}
