--- a/styles.css
+++ b/styles.css
@@ -251,3 +251,59 @@ nav {
 .project .btn-wrapper {
     justify-content: space-between;
 }
+
+/* Contacts Section */
+#contacts > h1 {
+    color: var(--primary);
+    font-size: 30px;
+}
+.contacts-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    gap: 50px;
+}
+.social-links {
+    max-width: 300px;
+    flex: 1;
+}
+.social-links > p {
+    font-weight: bold;
+}
+.icons-wrapper {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+.icons-wrapper img {
+    height: 30px;
+}
+.form-wrapper {
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    flex: 1;
+}
+.form-wrapper input, textarea {
+    width: 100%;
+    background-color: var(--dark-mode-S200);
+    color: var(--white);
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding: 16px;
+}
+.form-wrapper h3 {
+    margin-bottom: 15px;
+}
+.form-wrapper input {
+    margin-bottom: 10px;
+}
+.form-wrapper textarea {
+    margin-bottom: 30px;
+}
