--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,13 @@ section {
     color: var(--white);
     border: 2px solid var(--primary);
 }
+.menu-btn {
+    display: none;
+    width: 30px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
 
 /* Navigation Section */
 nav {
@@ -325,28 +332,45 @@ nav {
 
 /* For mobile devices */
 @media only screen and (max-width: 750px) {
-/* Navigation */
-nav {
-    background-color: var(--dark-mode-S900);
-}
-.navlinks {
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--dark-mode-S200);
-    padding-top: 30px;
-    align-items: stretch;
-    gap: 0;
-    margin-top: -900px;
-}
-.navlinks li {
-    text-align: center;
-    padding: 20px 0;
-}
-.navlinks li:hover {
-    background-color: var(--light-grey);
-}
+    .container {
+        width: 90%;
+    }
+    section {
+        margin: 60px auto;
+    }
+    /* Navigation */
+    nav {
+        background-color: var(--dark-mode-S900);
+        padding: 20px;
+    }
+    .navlinks {
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--dark-mode-S200);
+        padding-top: 30px;
+        align-items: stretch;
+        gap: 0;
+        margin-top: -900px;
+    }
+    .navlinks li {
+        text-align: center;
+        padding: 20px 0;
+    }
+    .navlinks li:hover {
+        background-color: var(--light-grey);
+    }
+    .menu-btn {
+        display: block;
+    }
+
+    /* Header Section */
+    #header {
+        flex-direction: column;
+        gap: 30px;
+        margin: 0 auto 60px;
+    }
 }
