--- a/styles.css
+++ b/styles.css
@@ -138,13 +138,14 @@ nav {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-top: 15px;
 }
 .experience > h1 {
     color: var(--primary);
     font-size: 80px;
 }
 .experience p {
-    font-size: 18px;
+    /* font-size: 18px; */
     font-weight: bold;
 }
 .skills {
@@ -385,5 +386,15 @@ footer {
     }
     .social-links {
         max-width: none;
+    }
+
+    /* Footer Section */
+    .footer-content {
+        flex-direction: column;
+        align-items: start;
+        gap: 15px;
+    }
+    footer {
+        margin: 80px auto 20px;
     }
 }
