--- a/styles.css
+++ b/styles.css
@@ -352,10 +352,14 @@ footer {
         width: 100%;
         height: 100%;
         background-color: var(--dark-mode-S200);
-        padding-top: 30px;
+        padding-top: 50px;
         align-items: stretch;
         gap: 0;
         margin-top: -900px;
+        transition: all 0.7s ease-in-out;
+    }
+    .navlinks.active {
+        margin-top: 0;
     }
     .navlinks li {
         text-align: center;
@@ -366,6 +370,8 @@ footer {
     }
     .menu-btn {
         display: block;
+        z-index: 100px;
+        cursor: pointer;
     }
 
     /* Header Section */
