Modify Header and Skills sections

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@
     --gradient-2: linear-gradient(139deg, #f97878 9.79%, rgba(255, 176, 119, 0.81) 64.34%, rgba(255, 176, 119, 0.81) 90.36%);
     --gradient-3: linear-gradient(140deg, #f97878 0%, #4052fb 73.99%, #0720ff 100%);
     --gradient-4: linear-gradient(142deg, #26c8fc 6.46%, #57ecc8 58.9%, #49f5db 93.88%);
+    --gradient-6: linear-gradient(77deg, rgba(34,193,195,1) 0%, rgba(47,253,45,1) 100%);;
+    --gradient-5: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,128,29,1) 50%, rgba(252,176,69,1) 100%);
+    --gradient-7: linear-gradient(77deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
 body {
@@ -28,8 +31,6 @@ body {
 a {
     text-decoration: none;
     color: var(--white);
-    font-weight: bold;
-    font-size: 18px;
 }
 ul {
     list-style: none;
@@ -96,6 +97,10 @@ nav {
     align-items: center;
     gap: 30px;
 }
+.navlinks a {
+    font-weight: bold;
+    font-size: 18px;
+}
 
 /* Header Section */
 #header {
@@ -126,41 +131,25 @@ nav {
     max-width: 90%;
 }
 
-/* About Me Section */
-#about-me > h1 {
+/* Skills Section */
+#skills > h1 {
     color: var(--primary);
     font-size: 30px;
 }
-#about-me > p {
-    margin-top: 10px;
-}
-.experience {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-top: 15px;
-}
-.experience > h1 {
-    color: var(--primary);
-    font-size: 80px;
-}
-.experience p {
-    /* font-size: 18px; */
-    font-weight: bold;
-}
-.skills {
+.skills-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
+    gap: 30px;
+    margin-top: 30px;
 }
 .skill {
     border-radius: 10px;
-    padding: 30px 20px;
+    padding: 10px 10px;
     height: 200px;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: center;
+    align-items: center;
 }
 .skill img {
     width: 70px;
@@ -180,17 +169,43 @@ nav {
 .skill-4 {
     background: var(--gradient-4);
 }
+.skill-5 {
+    background: var(--gradient-5);
+}
+.skill-6 {
+    background: var(--gradient-6);
+}
+.skill-7 {
+    background: var(--gradient-7);
+}
 
 /* Services Section */
 #services > h1 {
     color: var(--primary);
     font-size: 30px;
 }
+#services > p {
+    margin-top: 10px;
+}
+.experience {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 15px;
+}
+.experience > h1 {
+    color: var(--primary);
+    font-size: 80px;
+}
+.experience p {
+    /* font-size: 18px; */
+    font-weight: bold;
+}
 .services-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 .service {
     height: 300px;
@@ -379,6 +394,18 @@ footer {
         flex-direction: column;
         gap: 30px;
         margin: 0 auto 60px;
+    }
+
+    /* Skills Section */
+    .skills-container {
+        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+        gap: 20px;
+    }
+    .skill {
+        height: 160px;
+    }
+    .skill > h1 {
+        font-size: 24px;
     }
 
     /* Contacts Section */
