--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,11 @@
     --dark-mode-S1000: #181824;
     --dark-mode-S200: #31313f;
     --gradient-1: linear-gradient(180deg, #6473ff 0%, #2134e1 99.99%, #152bf1 100%);
-    --gradient-2: linear-gradient(139deg, #f97878 9.79%, rgba(255, 176, 119, 0.81) 64.34%, rgba(255, 176, 119, 0.81) 90.36%);
+    --gradient-2: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,128,29,1) 50%, rgba(252,176,69,1) 100%);
     --gradient-3: linear-gradient(140deg, #f97878 0%, #4052fb 73.99%, #0720ff 100%);
     --gradient-4: linear-gradient(142deg, #26c8fc 6.46%, #57ecc8 58.9%, #49f5db 93.88%);
+    --gradient-5: linear-gradient(139deg, #f97878 9.79%, rgba(255, 176, 119, 0.81) 64.34%, rgba(255, 176, 119, 0.81) 90.36%);
     --gradient-6: linear-gradient(77deg, rgba(34,193,195,1) 0%, rgba(47,253,45,1) 100%);;
-    --gradient-5: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,128,29,1) 50%, rgba(252,176,69,1) 100%);
     --gradient-7: linear-gradient(77deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
@@ -29,7 +29,6 @@ body {
     overflow-x: hidden;
 }
 a {
-    text-decoration: none;
     color: var(--white);
 }
 ul {
@@ -41,6 +40,13 @@ ul {
 }
 section {
     margin: 80px auto;
+}
+h1 {
+    font-size: 30px;
+    color: var(--primary);
+}
+h2 {
+    font-size: 24px;
 }
 
 /* Buttons */
@@ -59,8 +65,9 @@ section {
     padding: 12px 30px;
     border: none;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
+    text-decoration: none;
     cursor: pointer;
 }
 .btn img {
@@ -99,7 +106,8 @@ nav {
 }
 .navlinks a {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
+    text-decoration: none;
 }
 
 /* Header Section */
@@ -117,11 +125,9 @@ nav {
     max-width: 600px;
     flex: 1;
 }
-.header-content h1 {
+.header-content > h1 {
     font-size: 40px;
-}
-.header-content h2 {
-    font-size: 25px;
+    color: var(--white);
 }
 .header-img {
     text-align: center;
@@ -132,10 +138,6 @@ nav {
 }
 
 /* Skills Section */
-#skills > h1 {
-    color: var(--primary);
-    font-size: 30px;
-}
 .skills-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -154,7 +156,7 @@ nav {
 .skill img {
     width: 70px;
 }
-.skill > h1 {
+.skill > h2 {
     font-size: 30px;
 }
 .skill-1 {
@@ -179,36 +181,37 @@ nav {
     background: var(--gradient-7);
 }
 
-/* Services Section */
-#services > h1 {
-    color: var(--primary);
-    font-size: 30px;
+/* Education Section */
+.university {
+    margin-top: 15px;
 }
-#services > p {
-    margin-top: 10px;
+.university > h1 {
+    font-size: 22px;
+    color: var(--white);
 }
-.experience {
+.courses-title {
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-top: 15px;
 }
-.experience > h1 {
-    color: var(--primary);
+.courses-title > h1 {
     font-size: 80px;
 }
-.experience p {
-    /* font-size: 18px; */
+.courses-title p {
     font-weight: bold;
+    font-size: 1.2em;
 }
-.services-container {
+.courses-title a {
+    color: var(--primary);
+}
+.courses-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 20px;
     margin-top: 20px;
 }
-.service {
-    height: 300px;
+.course {
+    height: 320px;
     border: 2px solid var(--primary);
     border-radius: 10px;
     padding: 20px;
@@ -219,20 +222,45 @@ nav {
     text-align: center;
     gap: 10px;
 }
-.service img {
+.course > img {
     width: 70px;
 }
-.service > h2 {
+.course > h2 {
     color: var(--primary);
-    font-size: 30px;
 }
-.service:hover {
-    background: var(--gradient-1);
+.course:hover {
+    background: var(--gradient-2);
     border: none;
+    padding: 22px;
     cursor: pointer;
 }
-.service:hover > h2 {
+.course:hover > h2 {
     color: var(--white);
+}
+.certificate {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.certificate a {
+    font-weight: bold;
+    color: var(--primary);
+}
+.course:hover .certificate a {
+    color: var(--white);
+}
+.download {
+    height: 16px;
+}
+.download-white {
+    display: none;
+}
+.course:hover .download-white {
+    display: inline;
+}
+.course:hover .download-primary {
+    display: none;
 }
 
 /* Projects Section */
@@ -354,6 +382,7 @@ footer {
     section {
         margin: 60px auto;
     }
+
     /* Navigation */
     nav {
         background-color: var(--dark-mode-S900);
@@ -404,8 +433,13 @@ footer {
     .skill {
         height: 160px;
     }
-    .skill > h1 {
+    .skill > h2 {
         font-size: 24px;
+    }
+
+    /* Education Section */
+    .courses-title > p {
+        font-size: 1em;
     }
 
     /* Contacts Section */
