--- a/styles.css
+++ b/styles.css
@@ -299,74 +299,29 @@ nav {
     justify-content: end;
 }
 
-/* Contacts Section */
-#contacts > h1 {
-    color: var(--primary);
-    font-size: 30px;
-}
-.contacts-container {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    gap: 50px;
-}
-.social-links {
-    max-width: 300px;
-    flex: 1;
-}
-.social-links > p {
-    font-weight: bold;
-}
-.icons-wrapper {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 10px;
-    margin-top: 10px;
-}
-.icons-wrapper img {
-    height: 30px;
-}
-.form-wrapper {
-    max-width: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    flex: 1;
-}
-.form-wrapper input, textarea {
-    width: 100%;
-    background-color: var(--dark-mode-S200);
-    color: var(--white);
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    padding: 16px;
-}
-.form-wrapper h3 {
-    margin-bottom: 15px;
-}
-.form-wrapper input {
-    margin-bottom: 10px;
-}
-.form-wrapper textarea {
-    margin-bottom: 30px;
+/* About Me Section */
+#about-me > p {
+    margin-top: 30px;
 }
 
 /* Footer Section */
+footer {
+    margin: 120px auto 40px;
+}
 .footer-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     gap: 30px;
 }
-.footer-content > p {
+.footer-content > p, .footer-content > a {
     opacity: 0.6;
 }
-footer {
-    margin: 120px auto 40px;
+.footer-content > a {
+    font-weight: bold;
+}
+.footer-content img, footer .icons-wrapper img {
+    height: 30px;
 }
 
 /* For mobile devices */
@@ -435,19 +390,6 @@ footer {
     /* Education Section */
     .courses-title > p {
         font-size: 1em;
-    }
-
-    /* Contacts Section */
-    .contacts-container {
-        flex-direction: column;
-        justify-content: start;
-        gap: 30px;
-    }
-    .form-wrapper {
-        max-width: none;
-    }
-    .social-links {
-        max-width: none;
     }
 
     /* Footer Section */
