--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ nav {
 }
 .navlinks a {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
     text-decoration: none;
 }
 
@@ -189,6 +189,9 @@ nav {
 .university > h1, .job > h1 {
     font-size: 22px;
     color: var(--white);
+}
+#education > h2 {
+    margin-top: 20px;
 }
 .courses-title {
     display: flex;
@@ -301,7 +304,7 @@ nav {
 
 /* About Me Section */
 #about-me > p {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 /* Footer Section */
@@ -362,6 +365,9 @@ footer {
     .navlinks li:hover {
         background-color: var(--light-grey);
     }
+    .navlinks a {
+        font-size: 20px;
+    }
     .menu-btn {
         display: block;
         z-index: 100px;
@@ -393,12 +399,11 @@ footer {
     }
 
     /* Footer Section */
-    .footer-content {
-        flex-direction: column;
-        align-items: start;
-        gap: 15px;
-    }
     footer {
         margin: 80px auto 20px;
+    }
+    .footer-content {
+        flex-wrap: wrap;
+        gap: 0 15px;
     }
 }
