--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ nav {
 /* Skills Section */
 .skills-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 30px;
     margin-top: 30px;
 }
@@ -182,8 +182,8 @@ nav {
     background: var(--gradient-7);
 }
 
-/* Education Section & Experience Section*/
-.university, .job {
+/* Education Section*/
+.university {
     margin-top: 15px;
 }
 .university > h1, .job > h1 {
@@ -210,7 +210,7 @@ nav {
 }
 .courses-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     gap: 20px;
     margin-top: 20px;
 }
@@ -267,17 +267,25 @@ nav {
     display: none;
 }
 
+/* Experience Section & Project Section*/
+.job-container, .projects-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 30px;
+    margin-top: 30px;
+}
+.job, .project {
+    background-color: var(--dark-mode-S200);
+    padding: 20px;
+    border-radius: 10px;
+    border: none;
+}
+
 /* Projects Section */
 .projects-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 .project {
-    background-color: var(--dark-mode-S200);
-    border-radius: 10px;
-    margin-top: 30px;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
