--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ h2 {
     justify-content: start;
     align-items: center;
     gap: 20px;
+    flex-wrap: wrap;
     margin-top: 20px;
 }
 .btn {
@@ -122,7 +123,6 @@ nav {
     justify-content: center;
     align-items: start;
     gap: 20px;
-    min-width: 350px;
     max-width: 600px;
     flex: 1;
 }
@@ -147,8 +147,8 @@ nav {
 }
 .skill {
     border-radius: 10px;
-    padding: 10px 10px;
-    height: 200px;
+    padding: 10px;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -215,7 +215,7 @@ nav {
     margin-top: 20px;
 }
 .course {
-    height: 320px;
+    min-height: 320px;
     border: 2px solid var(--primary);
     border-radius: 10px;
     padding: 20px;
@@ -270,7 +270,7 @@ nav {
 /* Experience Section & Project Section*/
 .job-container, .projects-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     gap: 30px;
     margin-top: 30px;
 }
@@ -283,7 +283,7 @@ nav {
 
 /* Projects Section */
 .projects-container {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
 }
 .project {
     display: flex;
@@ -391,14 +391,14 @@ footer {
 
     /* Skills Section */
     .skills-container {
-        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
         gap: 20px;
     }
     .skill {
-        height: 160px;
+        min-height: 150px;
     }
     .skill > h2 {
-        font-size: 24px;
+        font-size: 22px;
     }
 
     /* Education Section */
