--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ nav {
 }
 .navlinks a {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
     text-decoration: none;
 }
 
@@ -141,7 +141,7 @@ nav {
 /* Skills Section */
 .skills-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 30px;
     margin-top: 30px;
 }
@@ -211,7 +211,7 @@ nav {
 }
 .courses-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 20px;
     margin-top: 20px;
 }
@@ -284,7 +284,7 @@ nav {
 
 /* Projects Section */
 .projects-container {
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
 .project {
     display: flex;
@@ -374,9 +374,6 @@ footer {
     }
     .navlinks li:hover {
         background-color: var(--light-grey);
-    }
-    .navlinks a {
-        font-size: 20px;
     }
     .menu-btn {
         display: block;
